changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: enable message rule addition or removal.
Nicolas Weeger 2010-05-29

Fix CRE crash when not enough reply data.
Nicolas Weeger 2010-05-29

Disable cf_darcap's plugin handleDeath function, replaced by a Python script.
Nicolas Weeger 2010-05-29

Expose 'Map.InsertAround' to Python.
Nicolas Weeger 2010-05-29

Remove unused "oldmessage" parameter from draw_ext_info, draw_ext_info_format,
  ext_info_map, ext_info_map_except, and ext_info_map_except2 functions and
  calls.
Kevin Bulgrien 2010-05-28

Fix socket/info.c::draw_ext_message() comments to be more informative and to
  update them to more completely describe current behavior.
Remove the socket/info.c::draw_ext_message() socket/info.c::print_message()
  call to fix bug 2984255 and to remove inappropriate log file clutter.
Remove socket/info.c::print_message() as LOG() is the proper method of logging
  messages.  It is obvious that the function has been modified from its
  original implementation as it expects a player pointer but does not use it.
  The only function that called it was draw_ext_info(), and it only did so
  when the player pointer was NULL or when a player's contr pointer was NULL.
  It appears that print_message() used to be a mechanism by which an old
  client could get simple messages without any formatting (based on out-dated
  comments in draw_ext_info()'s header), but that functionality is long gone.
Note:  draw_ext_info()'s oldmessage parameter is completely useless, unused,
  and should be set to NULL.  Really it should be removed and all calls to
  draw_ext_info() cleaned up likewise.