@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: enable new message file creation.
+Nicolas Weeger 2010-05-29
+
 CRE: enable message rule addition or removal.
 Nicolas Weeger 2010-05-29
 
